--- a/ansiblePlaybook/roles/LKE/tasks/main.yml
+++ b/ansiblePlaybook/roles/LKE/tasks/main.yml
@@ -2,12 +2,12 @@
   block:
   - name: Create cluster
     linode.cloud.lke_cluster:
-      label: {{ cluster_label }}
-      region: {{ cluster_dc }}
-      k8s_version: {{ cluster_version }}
+      label: "{{ cluster_label }}"
+      region: "{{ cluster_dc }}"
+      k8s_version: "{{ cluster_version }}"
       node_pools:
-        - type: {{ cluster_node_plan }}
-          count: {{ cluster_nodes }}
+        - type: "{{ cluster_node_plan }}"
+          count: "{{ cluster_nodes }}"
       state: present
       register: kubeconfig
 
@@ -17,5 +17,5 @@
     name: testing
     api_version: v1
     kind: Namespace
-    kubeconfig: {{ kubeconfig | b64decode }}
+    kubeconfig: "{{ kubeconfig | b64decode }}"
     state: present
