--- a/ansiblePlaybook/roles/LKE/tasks/main.yml
+++ b/ansiblePlaybook/roles/LKE/tasks/main.yml
@@ -1,15 +1,18 @@
-- name: Cluster creation
-  block:
-  - name: Create cluster
-    linode.cloud.lke_cluster:
-      label: "{{ cluster_label }}"
-      region: "{{ cluster_dc }}"
-      k8s_version: "{{ cluster_version }}"
-      node_pools:
-        - type: "{{ cluster_node_plan }}"
-          count: "{{ cluster_nodes }}"
-      state: present
-  register: kubeconfig
+- name: Create cluster
+  linode.cloud.lke_cluster:
+    label: "{{ cluster_label }}"
+    region: "{{ cluster_dc }}"
+    k8s_version: "{{ cluster_version }}"
+    node_pools:
+    - type: "{{ cluster_node_plan }}"
+      count: "{{ cluster_nodes }}"
+    state: present
+  register: cluster_creation_result
+
+- name: Store kubeconfig in a variable
+  set_fact:
+    kubeconfig_data: "{{ cluster_creation_result.kubeconfig }}"
+  when: cluster_creation_result.kubeconfig is defined
 
 
 - name: Create a k8s namespace
@@ -17,5 +20,5 @@
     name: testing
     api_version: v1
     kind: Namespace
-    kubeconfig: "{{ kubeconfig | b64decode }}"
+    kubeconfig: "{{ kubeconfig_data | b64decode }}"
     state: present
