--- a/ansiblePlaybook/requirements.txt
+++ b/ansiblePlaybook/requirements.txt
@@ -3,11 +3,11 @@ PyMySQL==1.0.2
 yamllint==1.26.2
 ansible-lint==6.0.1
 flake8==3.9.2
-linode_api4==5.5.0
 dnspython==2.2.1
-polling==0.3.2
-ansible-specdoc==0.0.14
 pyyaml==6.0.1
 dnspython==2.2.1
 docker==6.1.3
+linode-api4>=5.7.2
+polling>=0.3.2
 types-requests==2.31.0.2
+ansible-specdoc>=0.0.14
