--- a/ansiblePlaybook/requirements.txt
+++ b/ansiblePlaybook/requirements.txt
@@ -1,5 +1,4 @@
 ansible==6.0.0
-PyMySQL==1.0.2
 yamllint==1.26.2
 ansible-lint==6.0.1
 flake8==3.9.2
@@ -11,3 +10,7 @@ linode-api4>=5.7.2
 polling>=0.3.2
 types-requests==2.31.0.2
 ansible-specdoc>=0.0.14
+python>=3.6
+kubernetes>=12.0.0
+PyYAML>=3.11
+jsonpatch
