Fixing task decode

--- a/ansiblePlaybook/roles/LKE/tasks/main.yml
+++ b/ansiblePlaybook/roles/LKE/tasks/main.yml
@@ -22,7 +22,7 @@
 
 - name: Save Kubeconfig to a File
   copy:
-    content: "{{ kubeconfig | b64encode }}"
+    content: "{{ kubeconfig }}"
     dest: /root/.kube/config
 
 - name: Create a Kubernetes Namespace
