--- a/ansiblePlaybook/roles/LKE/tasks/main.yml
+++ b/ansiblePlaybook/roles/LKE/tasks/main.yml
@@ -28,7 +28,7 @@
 #Vault Setup
 
 - name: Create a Kubernetes Namespace
-  k8s:
+  kubernetes.core.k8s:
     state: present
     definition:
       apiVersion: v1
@@ -50,7 +50,7 @@
     - /root/vault-helm/values.yaml
 
 - name: Check RC status of command executed
-  k8s_exec:
+  kubernetes.core.k8s_exec:
     namespace: vault
     pod: vault-0
     command: vault operator init
@@ -66,7 +66,7 @@
 #External secrets setup
 
 - name: Create a Kubernetes Namespace
-  k8s:
+  kubernetes.core.k8s:
     state: present
     definition:
       apiVersion: v1
