--- a/ansiblePlaybook/roles/LKE/tasks/main.yml
+++ b/ansiblePlaybook/roles/LKE/tasks/main.yml
@@ -1,3 +1,32 @@
+
+#Helm setup
+- name: Installing Helm
+  block:
+  - name: Download Helm GPG key
+    get_url:
+      url: https://baltocdn.com/helm/signing.asc
+      dest: /tmp/helm-signing.asc
+  - name: Import Helm GPG key
+    shell:
+      cmd: gpg --dearmor /tmp/helm-signing.asc | tee /usr/share/keyrings/helm.gpg > /dev/null
+  - name: Install transport packages
+    apt:
+      name: apt-transport-https
+      state: present
+  - name: Configure Helm repository
+    blockinfile:
+      path: /etc/apt/sources.list.d/helm-stable-debian.list
+      block: |
+        deb [arch={{ ansible_architecture }} signed-by=/usr/share/keyrings/helm.gpg] https://baltocdn.com/helm/stable/debian/ all main
+  - name: Update apt package cache
+    apt:
+      update_cache: yes
+  - name: Install Helm
+    apt:
+      name: helm
+      state: present
+
+#LKE setup
 - name: Create cluster
   linode.cloud.lke_cluster:
     label: "{{ cluster_label }}"
