--- a/ansiblePlaybook/roles/LKE/tasks/main.yml
+++ b/ansiblePlaybook/roles/LKE/tasks/main.yml
@@ -87,7 +87,7 @@
     kind: Pod
     wait: yes
     wait_condition:
-      type: "PodScheduled"
+      type: "ContainersReady"
       status: "True"
     name: vault-0
     namespace: vault
