--- a/ansiblePlaybook/roles/LKE/tasks/main.yml
+++ b/ansiblePlaybook/roles/LKE/tasks/main.yml
@@ -86,6 +86,9 @@
   kubernetes.core.k8s_info:
     kind: Pod
     wait: yes
+    wait_condition:
+      type: "Ready"
+      status: "True"
     name: vault-0
     namespace: vault
     wait_sleep: 10
