--- a/ansiblePlaybook/roles/LKE/tasks/main.yml
+++ b/ansiblePlaybook/roles/LKE/tasks/main.yml
@@ -74,6 +74,19 @@
     repo: https://github.com/hashicorp/vault-helm.git
     dest: /tmp/k8s-vault/ansiblePlaybook/vault-helm
 
+
+- name: Create Local Storage Class
+  kubernetes.core.k8s:
+    state: present
+    definition:
+    apiVersion: storage.k8s.io/v1
+    kind: StorageClass
+    metadata:
+      name: local-storage
+      provisioner: kubernetes.io/no-provisioner
+      volumeBindingMode: WaitForFirstConsumer
+
+
 - name: Deploy Vault on with local values
   kubernetes.core.helm:
     name: vault
@@ -81,13 +94,20 @@
     release_namespace: vault
     values_files:
     - /tmp/k8s-vault/ansiblePlaybook/vault-helm/values.yaml
+    set_values:
+    - value: server.dataStorage.storageClass=local-storage
+      value_type: string
+    - value: server.auditStorage.storageClass=local-storage
+      value_type: string
+
+
 
 - name: Wait till the Pod vault-0 is Ready
   kubernetes.core.k8s_info:
     kind: Pod
     wait: yes
     wait_condition:
-      type: "Ready"
+      type: "PodScheduled"
       status: "True"
     name: vault-0
     namespace: vault
