--- a/ansiblePlaybook/roles/LKE/tasks/main.yml
+++ b/ansiblePlaybook/roles/LKE/tasks/main.yml
@@ -84,7 +84,7 @@
       metadata:
         name: local-storage
       provisioner: kubernetes.io/no-provisioner
-      volumeBindingMode: WaitForFirstConsumer
+      volumeBindingMode: Immediate
 
 
 - name: Deploy Vault on with local values
