--- a/ansiblePlaybook/roles/vault/tasks/main.yml
+++ b/ansiblePlaybook/roles/vault/tasks/main.yml
@@ -46,42 +46,31 @@
     unseal_key_5: "{{ command_output.stdout_lines[4] | regex_replace('Unseal Key 5: ', '') }}"
     initial_root_token: "{{ command_output.stdout_lines[6] | regex_replace('Initial Root Token: ', '') }}"
 
-- name: Set VAULT_ADDR Environment Variable
-  set_fact:
-    VAULT_ADDR: "http://127.0.0.1:8200"
 
-- name: Start kubectl Port Forward
-  shell: 
-    cmd: nohup kubectl port-forward svc/vault -n vault 8200:8200 &
+- name: execute vault unseal keys
+  kubernetes.core.k8s_exec:
+    namespace: vault
+    pod: vault-0
+    command: |
+      vault operator unseal $unseal_key_1 \
+      vault operator unseal $unseal_key_2 \
+      vault operator unseal $unseal_key_3 \ 
+      vault login $initial_root_token
 
-- name: wait till the Pod service is ready
-  shell:
-    cmd: sleep 10
 
-- name: Wait for Port Forward to Start
-  ansible.builtin.wait_for:
-    host: localhost
-    port: 8200
-    delay: 10
-    timeout: 200
-    state: started
+- name: create vault policy
+  kubernetes.core.k8s_exec:
+    namespace: vault
+    pod: vault-0
+    command: |
+      vault policy write demo-policy -<<EOF
+      path "*"
+      {
+        capabilities = ["read"]
+      }
+      EOF \
+      vault auth enable kubernetes
 
-- name: Unseal and login vault
-  shell: |
-    vault operator unseal $unseal_key_1
-    vault operator unseal $unseal_key_2
-    vault operator unseal $unseal_key_3
-    vault login $initial_root_token
-
-- name: Write Vault Policy
-  shell: |
-    vault policy write demo-policy -<<EOF
-    path "*"
-    {
-      capabilities = ["read"]
-    }
-    EOF
-    vault auth enable kubernetes
 
 - name: Set env required to k8s auth
   shell: |
@@ -91,9 +80,11 @@
     secret_name="$(kubectl get serviceaccount vault -n vault -o jsonpath='{.secrets[0].name}')"
     tr_account_token="$(kubectl get secret ${secret_name} -n vault -o jsonpath='{.data.token}' | base64 --decode)"
 
-- name: Write vault Authentication 
-  shell: vault write auth/kubernetes/config token_reviewer_jwt="${tr_account_token}" kubernetes_host="https://${k8s_host}:${k8s_port}" kubernetes_ca_cert="${k8s_cacert}" disable_issuer_verification=true
-
+- name: write vault authentication
+  kubernetes.core.k8s_exec:
+    namespace: vault
+    pod: vault-0
+    command: vault write auth/kubernetes/config token_reviewer_jwt="${tr_account_token}" kubernetes_host="https://${k8s_host}:${k8s_port}" kubernetes_ca_cert="${k8s_cacert}" disable_issuer_verification=true
 
 #External secrets setup
 
@@ -123,16 +114,22 @@
     demo_account_token="$(kubectl get secret ${demo_secret_name} -n external-secrets -o jsonpath='{.data.token}' | base64 --decode)" 
 
 - name: Write auth endpoint
-  shell: |
-    vault write auth/kubernetes/role/demo-role \
-    bound_service_account_names=external-secrets \
-    bound_service_account_namespaces=external-secrets \
-    policies=demo-policy \
-    ttl=24h
+  kubernetes.core.k8s_exec:
+    namespace: vault
+    pod: vault-0
+    command: |
+      vault write auth/kubernetes/role/demo-role \
+      bound_service_account_names=external-secrets \
+      bound_service_account_namespaces=external-secrets \
+      policies=demo-policy \
+      ttl=24h
 
-- name: Write auth endpoint
-  shell: |
-    vault write auth/kubernetes/login role=demo-role jwt=$demo_account_token iss=https://kubernetes.vault.svc.cluster.local
+
+- name: Write auth endpoint token 
+  kubernetes.core.k8s_exec:
+    namespace: vault
+    pod: vault-0
+    command: vault write auth/kubernetes/login role=demo-role jwt=$demo_account_token iss=https://kubernetes.vault.svc.cluster.local
 
 
 - name: Create a Kubernetes SecretStorre
