--- a/ansiblePlaybook/roles/vault/tasks/main.yml
+++ b/ansiblePlaybook/roles/vault/tasks/main.yml
@@ -25,8 +25,8 @@
 
 
 - name: wait till the Pod vault-0 is Ready
-  shell:
-    cmd: sleep 200
+  pause:
+    minutes: 3
 
 - name: execute vault init and get output
   kubernetes.core.k8s_exec:
@@ -51,11 +51,7 @@
   kubernetes.core.k8s_exec:
     namespace: vault
     pod: vault-0
-    command: |
-      vault operator unseal $unseal_key_1 \
-      vault operator unseal $unseal_key_2 \
-      vault operator unseal $unseal_key_3 \ 
-      vault login $initial_root_token
+    command: vault operator unseal $unseal_key_1 && vault operator unseal $unseal_key_2 && vault operator unseal $unseal_key_3 && vault login $initial_root_token
 
 
 - name: create vault policy
@@ -68,8 +64,7 @@
       {
         capabilities = ["read"]
       }
-      EOF \
-      vault auth enable kubernetes
+      EOF && vault auth enable kubernetes
 
 
 - name: Set env required to k8s auth
